# Typer

./: ITERATION_LOG.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: avatar-config.ts  avatar.ts  keymap.ts  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: adaptive.rs  keyboard.rs  lib.rs  main.rs  sprint.rs  stats.rs
