[package]
name = "typer"
version = "0.1.0"
description = "A cross-platform typing practice app with adaptive learning and real-time statistics"
authors = ["AnasElgamed8"]
edition = "2021"

[lib]
name = "typer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
